security/kyverno/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-image-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-no-latest-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Using ':latest' image tag is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
